Fix excalibur pages parsing

--- a/src/test/resources/page_main_excalibur_result_fail.html
+++ b/src/test/resources/page_main_excalibur_result_fail.html
@@ -80,7 +80,7 @@
 	<fieldset style="width:430px;">
 	<legend>Défi Excalibur</legend>
 	<p></p><table><tbody><tr><td><img src="./page_main_excalibur_result_fail_files/excalibur.gif"></td><td class="Contenu" valign="top">
-			Sans doute votre coeur n'était-il pas assez pur sur ce coup là. Retentez votre chance demain!
+			Sans doute votre coeur n'&eacute;tait-il pas assez pur sur ce coup l&agrave. Retentez votre chance demain!
 			</td></tr></tbody></table><p></p>
 	</fieldset>
 	</div><p></p>
